styles.css
@font-face {
    font-family: 'norsebold';
    src: url('fonts/norsebold-webfont.woff2') format('woff2'),
        url('fonts/norsebold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}


:root {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    /* 1 rem = 10px */
    font-size: 62.5%;

    --hero-text-color: white;
    --banner-font-size: 8rem;

    --input-border-default-color: rgb(229, 231, 235);
    --shadow-color: rgb(132, 132, 132);

    --valid-input-color: green;
    --invalid-input-color: red;
    --focus-input-color: rgb(0, 89, 255);

    --signup-footer-color: rgb(89, 109, 72);
    --signup-footer-hover-color: hsl(from var(--signup-footer-color) h s calc(l - 5));
    --signup-footer-focus-color: hsl(from var(--signup-footer-color) h s calc(l - 15));
}

body {
    font-size: 1.6rem;
    height: 100vh;

    display: flex;
}


/* || Left banner */

.hero {
    position: relative;
    min-width: fit-content;
    max-width: fit-content;
}

.hero .bg {
    height: 100%;
}

.hero .banner {
    position: absolute;
    top: 15%;
    width: 100%;

    background-color: rgba(0, 0, 0, 40%);

    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2rem;
    gap: 1rem;
}

.hero .banner h1 {
    font-family: "norsebold";
    font-size: var(--banner-font-size);
    color: var(--hero-text-color);
}

.hero .icon {
    height: calc(var(--banner-font-size) * 1.8);
}

.hero .img-attribution {
    font-size: 2rem;
    color: var(--hero-text-color);

    position: absolute;
    bottom: 3rem;

    /* Center text */
    left: 0;
    right: 0;
    width: fit-content;
    margin-inline: auto;

    /* For overflow when font size is too large */
    text-align: center;
}

.hero .img-attribution [href] {
    color: var(--hero-text-color);
}

/* || Sign-up */
.signup {
    background-color: rgb(238, 238, 238);

    display: flex;
    flex-direction: column;

    overflow: auto;
}

.signup > * {
    padding: 5rem;
}

.signup .text {
    font-size: 2.5rem;
    font-weight: bold;
    max-width: 75ch;
}

.signup .header {
    flex: 1;

    display: flex;
    flex-direction: column;
    justify-content: end;
}

.signup form {
    height: fit-content;
    background-color: rgb(255, 255, 255);
    box-shadow: 0 0 20px 5px var(--shadow-color);
}

.signup form label {
    color: rgb(100, 100, 100);
    font-weight: bold;
}

.signup .inputs {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    margin-top: 3rem;
}

.signup .inputs > div {
    display: flex;
    flex-direction: column;
}

.signup input {
    border: 1px solid rgb(150, 150, 150);
    border-radius: 5px;
    background-color: rgb(250, 250, 250);
    
    padding: 0.5rem 4rem 0.5rem 1rem;
    width: 30ch;
}

.signup .footer {
    flex: 1;
}

.signup .footer button {
    background-color: var(--signup-footer-color);
    color: white;
    padding: 1rem 3rem;
    border: none;
    border-radius: 10px;
}

.signup .footer button:hover {
    background-color: var(--signup-footer-hover-color);
    cursor: pointer;
}

.signup .footer button:active {
    background-color: var(--signup-footer-focus-color)
}

.signup .footer .login {
    margin-top: 3rem;
}

.signup .footer [href] {
    color: var(--signup-footer-color);
    text-decoration: none;
}

.signup .footer [href]:hover {
    color: var(--signup-footer-hover-color);
}

.signup .footer [href]:focus {
    color: var(--signup-footer-focus-color);
}

/* || Form validation */
.signup span {
    position: relative;
}

.signup input:user-valid,
.signup input:user-invalid,
.signup input:hover,
.signup input:focus {
    border-color: transparent;
}

.signup input:user-valid {
    outline: 2px solid var(--valid-input-color);
}

.signup input:user-invalid {
    outline: 2px solid var(--invalid-input-color);  
}

.signup span:has(input:user-valid)::after,
.signup span:has(input:user-invalid)::after {
    font-size: 2.5rem;
    position: absolute;
    right: 1rem;
}

.signup span:has(input:user-valid)::after {
    color: var(--valid-input-color);
    content: "✔";
}

.signup span:has(input:user-invalid)::after {
    color: var(--invalid-input-color);
    content: "✘";
}

.signup input:hover,
.signup input:focus {
    outline: 2px solid var(--focus-input-color);
    box-shadow: 5px 5px 10px var(--shadow-color);
}

